tests/ui/parser/recover-from-bad-variant.stderr
error: expected one of `!`, `)`, `,`, `.`, `::`, `?`, `{`, or an operator, found `:`
  --> $DIR/recover-from-bad-variant.rs:7:24
   |
LL |     let x = Enum::Foo(a: 3, b: 4);
   |                        ^ expected one of 8 possible tokens

error: aborting due to previous error

